[gd_scene load_steps=15 format=3 uid="uid://b4j3uvi3nugac"]

[ext_resource type="Texture2D" uid="uid://ydow5osuaefa" path="res://Images/Characters/Un_idle_1.png" id="1_8n6k5"]
[ext_resource type="Script" path="res://Scripts/scr_player.gd" id="1_mry85"]
[ext_resource type="Texture2D" uid="uid://6s8q6pd8rwht" path="res://Images/Characters/Un_fall_1.png" id="3_0xwhv"]
[ext_resource type="Texture2D" uid="uid://c1mia6pmdsol3" path="res://Images/Characters/Un_run_1.png" id="4_uf0vj"]
[ext_resource type="Texture2D" uid="uid://d3jc1td1iy33y" path="res://Images/Characters/Un_dead 1.png" id="5_4l3xj"]
[ext_resource type="Texture2D" uid="uid://1cgexntn8367" path="res://Images/Characters/Un_run_2.png" id="6_jj4yd"]
[ext_resource type="Texture2D" uid="uid://dxn4xfots5h53" path="res://Images/Characters/Un_run_3.png" id="7_elta6"]
[ext_resource type="Script" path="res://Scripts/scr_player_Sound_ctrl.gd" id="8_vev5r"]
[ext_resource type="AudioStream" uid="uid://cp2e2n37ko0kd" path="res://Sound/SFX/Magic2.wav" id="9_2nurb"]
[ext_resource type="AudioStream" uid="uid://msmqw6t4fe8m" path="res://Sound/SFX/Jump_landing.wav" id="10_hch8g"]
[ext_resource type="AudioStream" uid="uid://453qncswme1t" path="res://Sound/SFX/Hero_Hurt.wav" id="11_onrqi"]
[ext_resource type="AudioStream" uid="uid://cl3hliqomdp2w" path="res://Sound/SFX/Health.wav" id="12_sr3m3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kng6u"]
radius = 11.3
height = 23.04

[sub_resource type="SpriteFrames" id="SpriteFrames_gy3e4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uf0vj")
}],
"loop": true,
"name": &"Attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4l3xj")
}],
"loop": true,
"name": &"Dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0xwhv")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8n6k5")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uf0vj")
}, {
"duration": 1.0,
"texture": ExtResource("6_jj4yd")
}, {
"duration": 1.0,
"texture": ExtResource("7_elta6")
}],
"loop": true,
"name": &"Running",
"speed": 8.0
}]

[node name="obj_Player" type="CharacterBody2D"]
z_index = 1
position = Vector2(0, -9.53674e-07)
scale = Vector2(5, 5)
script = ExtResource("1_mry85")

[node name="Pony_state_machine" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.32, -11.75)
shape = SubResource("CapsuleShape2D_kng6u")

[node name="spr_player" type="Node2D" parent="."]
position = Vector2(0, -11)

[node name="Un_anim_spr" type="AnimatedSprite2D" parent="spr_player"]
texture_filter = 1
position = Vector2(1, -9)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_gy3e4")
animation = &"Attacking"

[node name="State_label" type="Label" parent="."]
texture_filter = 4
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 100
text = "State"

[node name="player_Sound_ctrl" type="Node2D" parent="."]
position = Vector2(0, 1.90735e-07)
scale = Vector2(0.2, 0.2)
script = ExtResource("8_vev5r")

[node name="Shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2nurb")

[node name="Jump_sound" type="AudioStreamPlayer" parent="."]

[node name="Land_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_hch8g")

[node name="Hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_onrqi")

[node name="Health_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_sr3m3")
